client/my-sites/checkout/checkout-thank-you/style.scss
/* ... */
.jetpack-instruction-list {
	margin: 0;

	list-style: none;
	counter-reset: item;
}

.jetpack-instruction-list__item {
	display: flex;
	flex-direction: row;
	margin-bottom: 1.5rem;

	strong {
		font-weight: 700;
	}

	&::before {
		content: counter(item);
		counter-increment: item;

		display: inline-flex;
		justify-content: center;
		align-items: center;

		min-width: 1.75em;
		height: 1.75em;
		margin-inline-end: 0.75em;

		background-color: var(--studio-gray-5);
		border-radius: 50%;
		color: var(--color-text-black);

		font-weight: 700;
	}
}

.jetpack-instruction-list__item .gridicon {
	margin-bottom: -3px;
}

// Design i2 overrides, the purchase-detail component is also used by the /plans/my-plan page to render plan features.
.is-redesign-v2.checkout-thank-you {
	&.main {
		max-width: 750px;
		padding: 0 24px 0;

		> .card {
			border: none;
		}
	}

	.checkout-thank-you__purchase-details-list {
		text-align: initial;
		margin-top: 40px;
		margin-bottom: 80px;
		display: flex;
		justify-content: center;

		// Each of the checkout thank you pages "details" component sections specifically wrap
		// all purchase details in a single unclassed div, so we need to target it for the
		// flexbox styles instead of .checkout-thank-you__purchase-details-list directly.
		> div {
			display: flex;
			flex-wrap: wrap;
			justify-content: center;
			gap: 30px;
		}

		@include breakpoint-deprecated( ">660px" ) {
			margin-top: 50px;
			padding-bottom: 0;
		}

		.purchase-detail {
			margin: 0;
			box-shadow: none;
			height: auto;
			min-width: auto;
			max-width: 280px;
			@include break-mobile {
				width: 600px;
			}
		}

		.purchase-detail__content {
			padding: 0;
		}


		.purchase-detail__image {
			display: none;
		}

		.purchase-detail__title {
			font-size: $font-body-small;
			line-height: 20px;
			font-weight: 500;
			color: var(--color-text);
		}

		.purchase-detail__description {
			font-size: $font-body-small;
			line-height: 20px;
			font-weight: 400;
			color: var(--color-text-subtle);
		}

		// Undo a.button styles
		a.purchase-detail__button {
			border: none;
			display: inline;
			margin: inherit;
			outline: inherit;
			overflow: inherit;
			text-align: left;
			text-overflow: inherit;
			text-decoration: underline;
			vertical-align: inherit;
			box-sizing: border-box;
			padding: 0;
			appearance: none;
			background-color: var(--color-surface);
			font-size: $font-body-small;
			line-height: 20px;
			font-weight: 500;
			color: var(--studio-blue-50);
		}
	}

	.checkout-thank-you__header {
		position: initial;
		padding: 0;
		text-align: center;

		&::before {
			font-size: $font-title-small;
			font-weight: 400;
			word-break: break-word;
		}
	}

	.checkout-thank-you__header-details {
		margin: 40px 0 0;
		display: flex;
		flex-direction: row;
		box-sizing: border-box;
		align-items: center;
		gap: 16px;
		padding: 24px;
		border-radius: 2px;
		border: 1px solid var(--color-border-subtle);
		flex-wrap: wrap;

		div {
			min-width: auto;
		}

		@media ( min-width: 480px ) {
			padding: 20px 25px;
			margin: 50px 0 0;
		}
	}

	.checkout-thank-you__header-details-content {
		display: flex;
		flex-direction: column;
		flex-grow: 1;
		flex-basis: 100%;
		text-align: left;
		@media ( min-width: 480px ) {
			flex-basis: initial;
		}
	}

	.checkout-thank-you__header-details-content-name {
		font-size: $font-body;
		font-weight: 500;
		line-height: 24px;
		color: var(--studio-gray-100);
		flex-grow: 1;
	}

	.checkout-thank-you__header-details-content-expiry {
		font-size: $font-body-small;
		line-height: 22px;
		color: var(--studio-gray-60);
	}

	.checkout-thank-you__header-details-buttons {
		display: flex;
		flex-wrap: wrap;
		gap: 16px;
		min-width: auto;
	}

	.checkout-thank-you__header-button {
		border-radius: 4px;
		margin: initial;
	}

	.checkout-thank-you__header-heading {
		@extend .wp-brand-font;
		font-size: $font-headline-small;
		color: var(--color-text);
		margin: 30px 0 8px 0;
		line-height: 40px;
		text-align: left;

		@include break-mobile {
			font-size: $font-headline-medium;
			margin: 60px 0 8px 0;
			line-height: 60px;
			text-align: center;
		}
	}

	.checkout-thank-you__header-text {
		color: var(--color-text-subtle);
		font-size: initial;
		margin: initial;
		text-align: left;

		@include break-mobile {
			text-align: center;
		}
	}

	.checkout-thank-you__header.is-placeholder {
		@include breakpoint-deprecated( "<660px" ) {
			padding-top: 70px;
		}

		@include breakpoint-deprecated( ">660px" ) {
			padding-left: 70px;
		}
	}
}

